Add vertex array object sample
Signed-off-by: Josue David Hernandez Gutierrez <megadavidtor@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,6 @@ target_link_libraries(hello_window glfw OpenGL GLEW)
 
 add_executable(hello_classic_opengl hello_classic_opengl.cc)
 target_link_libraries(hello_classic_opengl glfw OpenGL GLEW)
+
+add_executable(vertex_array_object vertex_array_object.cc)
+target_link_libraries(vertex_array_object glfw OpenGL GLEW)
